@@ -2,6 +2,7 @@ Thu Jun 27 16:56:49 1996  Kevin Layer  <layer@freezer>
 
 	* Makefile: revamp to make some compilation warnings go away (load all
 	sources before compiling anything)
+	* fi-compile.el: used by Makefile
 	* fi-basic-lep.el: lep::handle-query is used (I checked lisp, too)
 	* Doc.el: make some compiler warnings go away
 	* fi-changes.el: make some compiler warnings go away (don't use
